--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
                 </h1>
                 
                 <p class="hero-subtitle fade-up-animation">
-                    Transformando ideias em experiências digitais interativas
-                </p>
+    Transformo suas ideias em sites rápidos e modernos que geram resultados.
+    <strong>Aproveite a oferta especial de lançamento!</strong>
+</p>
                 
                 <div class="hero-cta fade-up-animation">
                     <a href="https://api.whatsapp.com/send?phone=5511999999999&text=Olá,%20Everton!%20Vi%20seu%20portfólio%20e%20gostaria%20de%20fazer%20um%20orçamento." 
