--- a/index.html
+++ b/index.html
@@ -17,17 +17,20 @@
 <body>
 
     <div id="preloader">
-    <svg class="logo-animado" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+    <svg class="logo-animado" viewBox="-50 -50 100 100" xmlns="http://www.w3.org/2000/svg">
         <defs>
             <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
                 <stop offset="0%" style="stop-color:#4a90e2;"/>
                 <stop offset="100%" style="stop-color:#8b5cf6;"/>
             </linearGradient>
         </defs>
-        <path fill="none" stroke="url(#logoGradient)" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"
-            d="M 30,65 L 10,50 L 30,35 M 70,35 L 90,50 L 70,65">
-        </path>
-        <circle cx="50" cy="50" r="4" fill="url(#logoGradient)"/>
+        <circle cx="0" cy="0" r="8" fill="url(#logoGradient)"/>
+        <path class="orbita" transform="rotate(45)" fill="none" stroke="url(#logoGradient)" stroke-width="4"
+            d="M -40,0 A 40,20 0 1,0 40,0 A 40,20 0 1,0 -40,0 Z" />
+        <path class="orbita" transform="rotate(-45)" fill="none" stroke="url(#logoGradient)" stroke-width="4"
+            d="M -40,0 A 40,20 0 1,0 40,0 A 40,20 0 1,0 -40,0 Z" />
+        <path class="orbita" transform="rotate(90)" fill="none" stroke="url(#logoGradient)" stroke-width="4"
+            d="M 0,-40 A 20,40 0 1,0 0,40 A 20,40 0 1,0 0,-40 Z" />
     </svg>
 </div>
     <div class="sidebar-toggle" id="sidebarToggle">
