--- a/index.html
+++ b/index.html
@@ -17,20 +17,21 @@
 <body>
 
     <div id="preloader">
-    <svg class="logo-animado" viewBox="-50 -50 100 100" xmlns="http://www.w3.org/2000/svg">
+    <svg class="logo-animado" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
         <defs>
             <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                <stop offset="0%" style="stop-color:#4a90e2;"/>
-                <stop offset="100%" style="stop-color:#8b5cf6;"/>
+                <stop offset="0%" stop-color="#4a90e2" />
+                <stop offset="100%" stop-color="#8b5cf6" />
+            </linearGradient>
+            <linearGradient id="glowGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                <stop offset="0%" stop-color="#87CEEB" stop-opacity="1"/>
+                <stop offset="100%" stop-color="#FFFFFF" stop-opacity="1"/>
             </linearGradient>
         </defs>
-        <circle cx="0" cy="0" r="8" fill="url(#logoGradient)"/>
-        <path class="orbita" transform="rotate(45)" fill="none" stroke="url(#logoGradient)" stroke-width="4"
-            d="M -40,0 A 40,20 0 1,0 40,0 A 40,20 0 1,0 -40,0 Z" />
-        <path class="orbita" transform="rotate(-45)" fill="none" stroke="url(#logoGradient)" stroke-width="4"
-            d="M -40,0 A 40,20 0 1,0 40,0 A 40,20 0 1,0 -40,0 Z" />
-        <path class="orbita" transform="rotate(90)" fill="none" stroke="url(#logoGradient)" stroke-width="4"
-            d="M 0,-40 A 20,40 0 1,0 0,40 A 20,40 0 1,0 0,-40 Z" />
+        <path class="trilha" fill="none" stroke="url(#logoGradient)" stroke-width="8" stroke-linecap="round"
+            d="M 75,15 H 25 V 85 H 75 M 25,50 H 65" />
+        <path class="brilho" fill="none" stroke="url(#glowGradient)" stroke-width="4" stroke-linecap="round"
+            d="M 75,15 H 25 V 85 H 75 M 25,50 H 65" />
     </svg>
 </div>
     <div class="sidebar-toggle" id="sidebarToggle">
