--- a/index.html
+++ b/index.html
@@ -572,6 +572,34 @@
                 </div>
             </div>
         </div>
+        <section id="contato" class="contato-section">
+    <div class="container">
+        <div class="section-header">
+            <h2 class="section-title fade-in-animation">Vamos Conversar</h2>
+            <p class="section-subtitle fade-in-animation">
+                Tem uma ideia? Preencha o formulário abaixo ou me chame no WhatsApp. Estou pronto para transformar seu projeto em realidade.
+            </p>
+            <div class="section-divider"></div>
+        </div>
+        <form action="SUA_URL_DO_FORMSPREE" method="POST" class="contato-form fade-in-animation">
+            <div class="form-group">
+                <input type="text" name="name" id="name" placeholder="Seu Nome" required>
+                <label for="name">Nome</label>
+            </div>
+            <div class="form-group">
+                <input type="email" name="email" id="email" placeholder="Seu E-mail" required>
+                <label for="email">E-mail</label>
+            </div>
+            <div class="form-group">
+                <textarea name="message" id="message" placeholder="Conte-me sobre seu projeto..." rows="5" required></textarea>
+                <label for="message">Sua Mensagem</label>
+            </div>
+            <button type="submit" class="cta-button">Enviar Mensagem</button>
+        </form>
+    </div>
+</section>
+        
+        
     </footer>
 
     <script src="script.js"></script>
