--- a/index.html
+++ b/index.html
@@ -53,37 +53,43 @@
         </div>
         
         <ul class="sidebar-menu">
-            <li class="sidebar-item">
-                <a href="#hero" class="sidebar-link active" data-tooltip="Início">
-                    <i class="fas fa-home" aria-hidden="true"></i>
-                    <span class="link-text">Início</span>
-                </a>
-            </li>
-            <li class="sidebar-item">
-                <a href="#about" class="sidebar-link" data-tooltip="Sobre Mim">
-                    <i class="fas fa-user" aria-hidden="true"></i>
-                    <span class="link-text">Sobre</span>
-                </a>
-            </li>
-            <li class="sidebar-item">
-                <a href="#timeline" class="sidebar-link" data-tooltip="Minha Jornada">
-                    <i class="fas fa-road" aria-hidden="true"></i>
-                    <span class="link-text">Jornada</span>
-                </a>
-            </li>
-            <li class="sidebar-item">
-                <a href="#curriculo" class="sidebar-link" data-tooltip="Meu Currículo">
-                    <i class="fas fa-file-alt" aria-hidden="true"></i>
-                    <span class="link-text">Currículo</span>
-                </a>
-            </li>
-            <li class="sidebar-item">
-                <a href="#projects" class="sidebar-link" data-tooltip="Projetos">
-                    <i class="fas fa-laptop-code" aria-hidden="true"></i>
-                    <span class="link-text">Projetos</span>
-                </a>
-            </li>
-        </ul>
+    <li class="sidebar-item">
+        <a href="#hero" class="sidebar-link active" data-tooltip="Início">
+            <i class="fas fa-home" aria-hidden="true"></i>
+            <span class="link-text">Início</span>
+        </a>
+    </li>
+    <li class="sidebar-item">
+        <a href="#about" class="sidebar-link" data-tooltip="Sobre Mim">
+            <i class="fas fa-user" aria-hidden="true"></i>
+            <span class="link-text">Sobre</span>
+        </a>
+    </li>
+    <li class="sidebar-item">
+        <a href="#timeline" class="sidebar-link" data-tooltip="Minha Jornada">
+            <i class="fas fa-road" aria-hidden="true"></i>
+            <span class="link-text">Jornada</span>
+        </a>
+    </li>
+    <li class="sidebar-item">
+        <a href="#curriculo" class="sidebar-link" data-tooltip="Meu Currículo">
+            <i class="fas fa-file-alt" aria-hidden="true"></i>
+            <span class="link-text">Currículo</span>
+        </a>
+    </li>
+    <li class="sidebar-item">
+        <a href="#projects" class="sidebar-link" data-tooltip="Projetos">
+            <i class="fas fa-laptop-code" aria-hidden="true"></i>
+            <span class="link-text">Projetos</span>
+        </a>
+    </li>
+    <li class="sidebar-item">
+        <a href="#contato" class="sidebar-link" data-tooltip="Entre em Contato">
+            <i class="fas fa-envelope" aria-hidden="true"></i>
+            <span class="link-text">Contato</span>
+        </a>
+    </li>
+</ul>
         
         <div class="sidebar-cta">
             <a href="https://api.whatsapp.com/send?phone=5511999999999&text=Olá,%20Everton!%20Vi%20seu%20portfólio%20e%20gostaria%20de%20fazer%20um%20orçamento." 
