--- a/index.html
+++ b/index.html
@@ -202,7 +202,92 @@
         </div>
     </section>
 
-    <section id="timeline"
+    <section id="timeline" class="timeline-section">
+    <div class="container">
+        <div class="section-header">
+            <h2 class="section-title fade-in-animation">Minha Jornada de Aprendizado</h2>
+            <p class="section-subtitle fade-in-animation">
+                Uma trajetória de dedicação contínua para transformar código em soluções incríveis.
+            </p>
+            <div class="section-divider"></div>
+        </div>
+
+        <div class="timeline-container">
+            <div class="timeline-line" id="timeline-progress"></div>
+
+            <div class="timeline-item fade-in-animation" data-date="Fev/2025 - Mar/2025">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <h3>A Base Sólida: HTML5 e CSS3</h3>
+                    <p>Iniciei minha jornada focado em construir a estrutura fundamental da web. Meu primeiro objetivo foi dominar a criação de sites semanticamente corretos, essenciais para um bom posicionamento no Google (SEO).</p>
+                    <div class="timeline-tech">
+                        <span class="tech-tag">HTML5 Semântico</span>
+                        <span class="tech-tag">CSS3</span>
+                        <span class="tech-tag">SEO Básico</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="timeline-item fade-in-animation" data-date="Abr/2025 - Mai/2025">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <h3>Dando Vida às Páginas: JavaScript</h3>
+                    <p>Fui além do visual estático, mergulhando no JavaScript para criar interações que engajam o usuário, como animações, menus dinâmicos e validações de formulário, tornando a experiência mais fluida.</p>
+                    <div class="timeline-tech">
+                        <span class="tech-tag">JavaScript ES6+</span>
+                        <span class="tech-tag">Manipulação do DOM</span>
+                        <span class="tech-tag">Eventos</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="timeline-item fade-in-animation" data-date="Jun/2025 - Jul/2025">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <h3>Design que se Adapta: Layouts Responsivos</h3>
+                    <p>Com os fundamentos sólidos, foquei em dominar Flexbox e CSS Grid. Hoje, garanto que os sites que construo sejam perfeitos em qualquer dispositivo, do celular ao desktop, seguindo a abordagem Mobile-First.</p>
+                    <div class="timeline-tech">
+                        <span class="tech-tag">Flexbox</span>
+                        <span class="tech-tag">CSS Grid</span>
+                        <span class="tech-tag">Mobile-First</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="timeline-item fade-in-animation" data-date="Julho/2025">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <h3>Colocando em Prática: Projeto Real</h3>
+                    <p>Apliquei todo o conhecimento adquirido no projeto "Prof Vane PDFs", uma plataforma real e funcional. Essa experiência validou minha capacidade de ir do conceito ao lançamento e entregar um produto de qualidade.</p>
+                    <div class="timeline-tech">
+                        <span class="tech-tag">Projeto Completo</span>
+                        <span class="tech-tag">Gestão de Prazo</span>
+                        <span class="tech-tag">Cliente Satisfeito</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="timeline-item future-item fade-in-animation" data-date="Em Andamento">
+                <div class="timeline-marker future-marker"></div>
+                <div class="timeline-content">
+                    <h3>Evolução Contínua: Foco em React.js e Performance</h3>
+                    <p>A tecnologia evolui, e eu também. Atualmente, estou a aprofundar os meus estudos em <strong>React.js</strong> para criar interfaces ainda mais dinâmicas e otimizadas, sempre com foco em performance e acessibilidade para entregar o melhor resultado para você.</p>
+                    <div class="timeline-tech">
+                        <span class="tech-tag future-tag">React.js</span>
+                        <span class="tech-tag future-tag">Performance Web</span>
+                        <span class="tech-tag future-tag">Acessibilidade</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section> ```
+
+Depois de colar o código acima:
+1.  **Salve** o arquivo `index.html`.
+2.  Atualize a página no seu navegador, se necessário, com uma **atualização forçada** (`Ctrl + F5` ou `Cmd + Shift + R`) para limpar qualquer cache.
+
+A sua timeline deve voltar a aparecer, agora com os textos e datas corretos. O mais provável é que a tag `</section>` estivesse mesmo em falta.
 
     <section id="curriculo" class="curriculo-section">
         <div class="container">
