--- a/index.html
+++ b/index.html
@@ -569,6 +569,29 @@ A sua timeline deve voltar a aparecer, agora com os textos e datas corretos. O m
             <span class="back-to-top-text">Topo</span>
         </div>
     </div>
+
+    <section id="depoimentos" class="depoimentos-section">
+    <div class="container">
+        <div class="section-header">
+            <h2 class="section-title fade-in-animation">O Que Meus Clientes Dizem</h2>
+            <p class="section-subtitle fade-in-animation">A confiança e a satisfação de quem já trabalhou comigo.</p>
+            <div class="section-divider"></div>
+        </div>
+
+        <div class="depoimento-card fade-in-animation">
+            <img src="https://i.pravatar.cc/150?img=12" alt="Foto da Cliente Vanessa" class="depoimento-avatar">
+            <div class="depoimento-content">
+                <blockquote>
+                    "O Everton superou todas as minhas expectativas! Ele não apenas criou um site lindo e funcional para o meu projeto de PDFs, mas também foi extremamente atencioso durante todo o processo. O resultado ficou rápido, profissional e já estou a receber mais contatos. Recomendo de olhos fechados!"
+                </blockquote>
+                <cite>
+                    <strong>Vanessa (Nome Fictício)</strong>
+                    <span>Fundadora do Prof Vane PDFs</span>
+                </cite>
+            </div>
+        </div>
+    </div>
+</section>
             <section id="contato" class="contato-section">
     <div class="container">
         <div class="section-header">
