--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
         </a>
     </li>
     <li class="sidebar-item">
+        <a href="#depoimentos" class="sidebar-link" data-tooltip="Depoimentos">
+            <i class="fas fa-comments" aria-hidden="true"></i>
+            <span class="link-text">Depoimentos</span>
+        </a>
+    </li>
+    <li class="sidebar-item">
         <a href="#contato" class="sidebar-link" data-tooltip="Entre em Contato">
             <i class="fas fa-envelope" aria-hidden="true"></i>
             <span class="link-text">Contato</span>
