--- a/index.html
+++ b/index.html
@@ -585,17 +585,18 @@ A sua timeline deve voltar a aparecer, agora com os textos e datas corretos. O m
         </div>
 
         <div class="depoimento-card fade-in-animation">
-            <img src="https://i.pravatar.cc/150?img=12" alt="Foto da Cliente Vanessa" class="depoimento-avatar">
-            <div class="depoimento-content">
-                <blockquote>
-                    "O Everton superou todas as minhas expectativas! Ele não apenas criou um site lindo e funcional para o meu projeto de PDFs, mas também foi extremamente atencioso durante todo o processo. O resultado ficou rápido, profissional e já estou a receber mais contatos. Recomendo de olhos fechados!"
-                </blockquote>
-                <cite>
-                    <strong>Vanessa (Nome Fictício)</strong>
-                    <span>Fundadora do Prof Vane PDFs</span>
-                </cite>
-            </div>
-        </div>
+    <div class="depoimento-avatar-iniciais">
+        <span>VN</span> </div>
+    <div class="depoimento-content">
+        <blockquote>
+            "O Everton superou todas as minhas expectativas! Ele não apenas criou um site lindo e funcional para o meu projeto de PDFs, mas também foi extremamente atencioso durante todo o processo. O resultado ficou rápido, profissional e já estou a receber mais contatos. Recomendo de olhos fechados!"
+        </blockquote>
+        <cite>
+            <strong>Vanessa (Exemplo)</strong>
+            <span>Fundadora do Prof Vane PDFs</span>
+        </cite>
+    </div>
+</div>
     </div>
 </section>
             <section id="contato" class="contato-section">
