--- a/index.html
+++ b/index.html
@@ -389,6 +389,12 @@ A sua timeline deve voltar a aparecer, agora com os textos e datas corretos. O m
             <li><i class="fas fa-check-circle" aria-hidden="true"></i>Configuração de SEO Inicial (Mais fácil de achar no Google)</li>
             <li><i class="fas fa-check-circle" aria-hidden="true"></i>Design 100% Responsivo para Celulares</li>
         </ul>
+
+        <div class="offer-guarantee">
+            <i class="fas fa-shield-alt"></i>
+            <p><strong>Sua tranquilidade em primeiro lugar:</strong> Faça seu orçamento sem compromisso. O custo inicial é apenas o registro do seu domínio, e o pagamento pelo desenvolvimento do site é feito <strong>somente na entrega final</strong>, quando você estiver 100% satisfeito.</p>
+        </div>
+
         <div class="offer-cta">
              <a href="https://api.whatsapp.com/send?phone=5543998719821&text=Olá,%20Everton!%20Vi%20sua%20oferta%20de%20lançamento%20e%20quero%20garantir%20minha%20vaga!"
                 class="cta-button pulse-animation" target="_blank">
