--- a/Index.htm
+++ b/Index.htm
@@ -122,9 +122,9 @@
                 </h1>
                 
                 <p class="hero-subtitle fade-up-animation">
-                    Transformo suas ideias em sites rápidos e modernos que geram resultados.
-                    <strong>Aproveite a oferta especial de lançamento!</strong>
-                </p>
+    Transformo suas ideias em sites rápidos e modernos que geram resultados.<br>
+    <strong>Sua satisfação garantida: pague somente após aprovar o site.</strong>
+</p>
                 
                 <div class="hero-cta fade-up-animation">
     <a href="https://api.whatsapp.com/send?phone=5543998719821&text=Olá,%20Everton!%20Vi%20seu%20portfólio%20e%20gostaria%20de%20receber%20um%20orçamento%20gratuito."
@@ -374,22 +374,30 @@ A sua timeline deve voltar a aparecer, agora com os textos e datas corretos. O m
         <i class="fas fa-rocket" aria-hidden="true"></i>
     </div>
     <div class="offer-content">
-        <h3 class="offer-title">Oferta de Lançamento do Portfólio</h3>
-        <p class="offer-description">
-            Para celebrar minha jornada, as <strong>próximas 2 vagas</strong> para novos projetos (site institucional ou landing page) receberão um pacote de otimização completo, totalmente <strong>gratuito! (Restam apenas 2 de 5!)</strong>
+    <h3 class="offer-title">Oferta de Lançamento do Portfólio</h3>
+    <p class="offer-description">
+        Para celebrar minha jornada, os <strong>próximos 2 projetos</strong> (site institucional ou landing page) receberão um pacote de otimização completo, totalmente <strong>gratuito! (Restam apenas 2 de 5!)</strong>
+    </p>
+    <ul class="offer-benefits">
+        <li><i class="fas fa-check-circle" aria-hidden="true"></i>Análise e Otimização de Performance (Site mais rápido)</li>
+        <li><i class="fas fa-check-circle" aria-hidden="true"></i>Configuração de SEO Inicial (Mais fácil de achar no Google)</li>
+        <li><i class="fas fa-check-circle" aria-hidden="true"></i>Design 100% Responsivo para Celulares</li>
+    </ul>
+
+    <div class="offer-payment-guarantee" style="margin-top: 2rem; margin-bottom: 2rem; padding: 1.5rem; background: rgba(74, 144, 226, 0.05); border-left: 4px solid var(--primary-blue); border-radius: 8px;">
+        <p style="margin: 0; font-size: 1.1rem; color: var(--text-secondary); line-height: 1.7;">
+            <i class="fas fa-shield-alt" style="margin-right: 10px; color: var(--primary-blue);" aria-hidden="true"></i>
+            <strong>Sua Segurança em Primeiro Lugar:</strong> Comece seu projeto sem riscos! Seu único investimento inicial é o custo do domínio (caso precise de um novo). O pagamento pelo desenvolvimento do site é feito <strong>somente após a entrega e sua aprovação final</strong>.
         </p>
-        <ul class="offer-benefits">
-            <li><i class="fas fa-check-circle" aria-hidden="true"></i>Análise e Otimização de Performance (Site mais rápido)</li>
-            <li><i class="fas fa-check-circle" aria-hidden="true"></i>Configuração de SEO Inicial (Mais fácil de achar no Google)</li>
-            <li><i class="fas fa-check-circle" aria-hidden="true"></i>Design 100% Responsivo para Celulares</li>
-        </ul>
-        <div class="offer-cta">
-             <a href="https://api.whatsapp.com/send?phone=5543998719821&text=Olá,%20Everton!%20Vi%20sua%20oferta%20de%20lançamento%20e%20quero%20garantir%20minha%20vaga!"
-                class="cta-button pulse-animation" target="_blank">
-                 <i class="fab fa-whatsapp" aria-hidden="true"></i>
-                 Garantir Minha Vaga Agora!
-             </a>
-        </div>
+    </div>
+    <div class="offer-cta">
+         <a href="https://api.whatsapp.com/send?phone=5543998719821&text=Olá,%20Everton!%20Vi%20sua%20oferta%20de%20lançamento%20e%20quero%20garantir%20minha%20vaga!"
+            class="cta-button pulse-animation" target="_blank">
+             <i class="fab fa-whatsapp" aria-hidden="true"></i>
+             Garantir Minha Vaga Agora!
+         </a>
+    </div>
+</div>
     </div>
 </div>
         </div>
