--- a/Index.htm
+++ b/Index.htm
@@ -17,22 +17,9 @@
 <body>
 
     <div id="preloader">
-    <svg class="logo-animado" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-        <defs>
-            <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                <stop offset="0%" stop-color="#4a90e2" />
-                <stop offset="100%" stop-color="#8b5cf6" />
-            </linearGradient>
-            <linearGradient id="glowGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                <stop offset="0%" stop-color="#87CEEB" stop-opacity="1"/>
-                <stop offset="100%" stop-color="#FFFFFF" stop-opacity="1"/>
-            </linearGradient>
-        </defs>
-        <path class="trilha" fill="none" stroke="url(#logoGradient)" stroke-width="8" stroke-linecap="round"
-            d="M 75,15 H 25 V 85 H 75 M 25,50 H 65" />
-        <path class="brilho" fill="none" stroke="url(#glowGradient)" stroke-width="4" stroke-linecap="round"
-            d="M 75,15 H 25 V 85 H 75 M 25,50 H 65" />
-    </svg>
+    <div class="preloader-text">Everton.dev</div>
+    <div class="preloader-gate" id="gate-top"></div>
+    <div class="preloader-gate" id="gate-bottom"></div>
 </div>
     <div class="sidebar-toggle" id="sidebarToggle">
         <i class="fas fa-bars" aria-hidden="true"></i>
