--- a/Index.htm
+++ b/Index.htm
@@ -16,11 +16,7 @@
 </head>
 <body>
 
-    <div id="preloader">
-    <div class="preloader-text">Everton.dev</div>
-    <div class="preloader-gate" id="gate-top"></div>
-    <div class="preloader-gate" id="gate-bottom"></div>
-</div>
+    div id="preloader
     <div class="sidebar-toggle" id="sidebarToggle">
         <i class="fas fa-bars" aria-hidden="true"></i>
     </div>
