--- a/Index.htm
+++ b/Index.htm
@@ -16,7 +16,9 @@
 </head>
 <body>
 
-    div id="preloader
+    <div id="preloader">
+        <div class="spinner"></div>
+    </div>
     <div class="sidebar-toggle" id="sidebarToggle">
         <i class="fas fa-bars" aria-hidden="true"></i>
     </div>
