--- a/Index.htm
+++ b/Index.htm
@@ -17,7 +17,7 @@
 <body>
 
     <div id="preloader">
-        <div class="spinner"></div>
+        <div class="Everton"></div>
     </div>
     <div class="sidebar-toggle" id="sidebarToggle">
         <i class="fas fa-bars" aria-hidden="true"></i>
