--- a/Index.htm
+++ b/Index.htm
@@ -264,7 +264,7 @@
             </div>
         </div>
     </div>
-</section> ```
+</section> 
 
 
     <section id="curriculo" class="curriculo-section">
@@ -295,7 +295,7 @@
                     <div class="curriculo-bloco">
                         <h3 class="bloco-titulo"><i class="fas fa-paper-plane" aria-hidden="true"></i> Contato Profissional</h3>
                         <ul class="info-list">
-                             <li>
+                            <li>
                                 <h4>E-mail</h4>
                                 <p>seu.email@exemplo.com</p>
                             </li>
@@ -369,11 +369,11 @@
         </p>
     </div>
     <div class="offer-cta">
-         <a href="https://api.whatsapp.com/send?phone=5543998719821&text=Olá,%20Everton!%20Vi%20sua%20oferta%20de%20lançamento%20e%20quero%20garantir%20minha%20vaga!"
-            class="cta-button pulse-animation" target="_blank">
-             <i class="fab fa-whatsapp" aria-hidden="true"></i>
-             Garantir Minha Vaga Agora!
-         </a>
+       <a href="https://api.whatsapp.com/send?phone=5543998719821&text=Olá,%20Everton!%20Vi%20sua%20oferta%20de%20lançamento%20e%20quero%20garantir%20minha%20vaga!"
+           class="cta-button pulse-animation" target="_blank">
+           <i class="fab fa-whatsapp" aria-hidden="true"></i>
+           Garantir Minha Vaga Agora!
+       </a>
     </div>
 </div>
     </div>
