--- a/Index.htm
+++ b/Index.htm
@@ -106,19 +106,7 @@
             </h1>
 
             <div class="hero-computer-animation">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 120">
-                    <defs>
-                        <linearGradient id="screenGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                            <stop offset="0%" stop-color="#4a90e2" stop-opacity="0.5"></stop>
-                            <stop offset="100%" stop-color="#8b5cf6" stop-opacity="0.5"></stop>
-                        </linearGradient>
-                    </defs>
-                    <path d="M 10 110 L 190 110 L 200 100 L 0 100 Z" fill="#2a2a2a"></path>
-                    <rect x="15" y="10" width="170" height="90" rx="5" fill="#1a1a1a" stroke="#4a90e2" stroke-width="1"></rect>
-                    <rect class="animated-screen" x="25" y="20" width="150" height="70" fill="url(#screenGradient)"></rect>
-                    <path d="M 35 35 H 80 M 35 45 H 95 M 35 55 H 70 M 35 65 H 105" stroke="#ffffff" stroke-width="1.5" stroke-opacity="0.3"></path>
-                    <circle cx="100" cy="55" r="3" fill="#4a90e2" opacity="0.7"></circle>
-                </svg>
+            <img src="computador.png" alt="Computador Moderno">
             </div>
             <p class="hero-subtitle fade-up-animation">
                 Transformo suas ideias em sites rápidos e modernos que geram resultados.<br>
