--- a/Index.htm
+++ b/Index.htm
@@ -291,12 +291,12 @@
                         <h3 class="bloco-titulo"><i class="fas fa-graduation-cap" aria-hidden="true"></i> Formação Acadêmica</h3>
                         <ul class="info-list">
                             <li>
-                                <h4>Análise e Desenvolvimento de Sistemas (Exemplo)</h4>
-                                <p>Universidade Exemplo (2023 - 2025)</p>
+                                <h4>Ciências contábeis </h4>
+                                <p>Faccar Faculdade Paranaense (2013 - 2017)</p>
                             </li>
                             <li>
-                                <h4>Desenvolvimento Web Full-Stack (Exemplo)</h4>
-                                <p>Curso Online de Renome (2024)</p>
+                                <h4>Desenvolvimento Web Full-Stack </h4>
+                                <p>Cursando em IFPR Campus Avançado Arapongas (2025)</p>
                             </li>
                         </ul>
                     </div>
