--- a/Index.htm
+++ b/Index.htm
@@ -305,11 +305,11 @@
                         <ul class="info-list">
                             <li>
                                 <h4>E-mail</h4>
-                                <p>seu.email@exemplo.com</p>
+                                <p>evertonmoura.dev@gmail.com</p>
                             </li>
                             <li>
                                 <h4>Telefone</h4>
-                                <p>(11) 99999-9999</p>
+                                <p>(43) 998719821</p>
                             </li>
                         </ul>
                     </div>
