--- a/Index.htm
+++ b/Index.htm
@@ -424,7 +424,7 @@
                         </svg>
                         <div class="project-overlay">
                             <div class="project-actions">
-                                <a href="https://prof-vane-pdfs-everton.replit.app/" class="btn-primary" target="_blank">
+                                <a href="https://materiaisprofvane.netlify.app/" class="btn-primary" target="_blank">
                                     <i class="fas fa-external-link-alt" aria-hidden="true"></i>
                                     Ver Site ao Vivo
                                 </a>
