--- a/Index.htm
+++ b/Index.htm
@@ -402,26 +402,10 @@
             <div class="projects-grid">
                 <div class="project-card fade-in-animation">
                     <div class="project-image">
-                        <svg viewBox="0 0 400 250" xmlns="http://www.w3.org/2000/svg">
-                            <defs>
-                                <linearGradient id="profVaneGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                                    <stop offset="0%" style="stop-color:#ff6b9d;stop-opacity:1" />
-                                    <stop offset="50%" style="stop-color:#c44569;stop-opacity:1" />
-                                    <stop offset="100%" style="stop-color:#f8b500;stop-opacity:1" />
-                                </linearGradient>
-                            </defs>
-                            <rect width="100%" height="100%" fill="url(#profVaneGradient)"/>
-                            <circle cx="200" cy="100" r="35" fill="rgba(255,255,255,0.3)"/>
-                            <path d="M200 75 Q185 85 185 100 Q185 120 200 125 Q215 120 215 100 Q215 85 200 75 Z" fill="rgba(255,255,255,0.6)"/>
-                            <path d="M200 70 Q195 65 195 72" stroke="rgba(255,255,255,0.6)" stroke-width="2" fill="none"/>
-                            <rect x="120" y="150" width="50" height="35" fill="rgba(255,255,255,0.4)" rx="3"/>
-                            <rect x="125" y="145" width="50" height="35" fill="rgba(255,255,255,0.5)" rx="3"/>
-                            <rect x="130" y="140" width="50" height="35" fill="rgba(255,255,255,0.6)" rx="3"/>
-                            <rect x="230" y="150" width="50" height="35" fill="rgba(255,255,255,0.4)" rx="3"/>
-                            <rect x="235" y="145" width="50" height="35" fill="rgba(255,255,255,0.5)" rx="3"/>
-                            <rect x="240" y="140" width="50" height="35" fill="rgba(255,255,255,0.6)" rx="3"/>
-                            <text x="200" y="210" text-anchor="middle" fill="rgba(255,255,255,0.8)" font-size="20" font-weight="bold" font-family="Arial">PDFs</text>
-                        </svg>
+                    <img src="images/prof-vane-pdfs.png" alt="Plataforma educacional Prof Vane PDFs">
+                <div class="project-overlay">
+            </div>
+       </div>
                         <div class="project-overlay">
                             <div class="project-actions">
                                 <a href="https://prof-vane-pdfs-everton.replit.app/" class="btn-primary" target="_blank">
