--- a/Index.htm
+++ b/Index.htm
@@ -240,6 +240,11 @@
         <i class="fas fa-arrow-up"></i>
     </a>
 
+    <a href="https://wa.me/5543998719821?text=Olá,%20Everton!%20Vi%20seu%20portfólio%20e%20gostaria%20de%20um%20orçamento." class="whatsapp-button" id="whatsapp-float-button" target="_blank">
+        <i class="fab fa-whatsapp whatsapp-icon"></i>
+        <span class="whatsapp-tooltip">Fale Comigo!</span>
+    </a>
+
     <script src="script.js"></script>
 </body>
 </html>
