--- a/Index.htm
+++ b/Index.htm
@@ -7,12 +7,21 @@
     <meta name="description" content="Transformo suas ideias em sites que geram resultados. Especialista em desenvolvimento para autônomos e pequenos negócios. Peça seu orçamento!">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Source+Code+Pro:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+    <div id="preloader">
+        <div class="preloader-content">
+            <h1 class="preloader-logo">
+                <span id="logo-text"></span><span class="cursor">_</span>
+            </h1>
+            <p class="preloader-subtitle" id="preloader-subtitle">Desenvolvedor</p>
+        </div>
+    </div>
+    
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#hero" class="nav__logo">Everton <span class="logo-accent">.dev</span></a>
@@ -230,7 +239,7 @@
                         </div>
                     </div>
                 </div>
-                 </div>
+            </div>
         </section>
 
         <section id="faq" class="faq section">
