--- a/Index.htm
+++ b/Index.htm
@@ -245,4 +245,82 @@
         <section id="faq" class="faq section">
             <div class="section__header">
                 <h2 class="section__title">Perguntas Frequentes</h2>
-                <span class="section__subtitle
+                <span class="section__subtitle">Tirando suas dúvidas mais comuns</span>
+            </div>
+            <div class="faq__container container">
+                <div class="faq__item">
+                    <div class="faq__header">
+                        <h3>Quanto tempo leva para criar um site?</h3>
+                        <i class="fas fa-chevron-down faq__icon"></i>
+                    </div>
+                    <div class="faq__content">
+                        <p>Uma Landing Page leva em média de 7 a 14 dias para ser concluída. Já um Site Institucional com mais páginas pode levar de 15 a 30 dias. O prazo exato sempre dependerá da complexidade do projeto e da agilidade no envio das informações por parte do cliente.</p>
+                    </div>
+                </div>
+                <div class="faq__item">
+                    <div class="faq__header">
+                        <h3>Eu preciso ter um domínio e hospedagem?</h3>
+                        <i class="fas fa-chevron-down faq__icon"></i>
+                    </div>
+                    <div class="faq__content">
+                        <p>Sim. O domínio (ex: www.suaempresa.com.br) é seu endereço na internet, e a hospedagem é o servidor onde seu site fica armazenado. Caso você não tenha, não se preocupe! Eu ofereço toda a assessoria para registrar o melhor domínio e contratar o plano de hospedagem ideal para você, sem complicação.</p>
+                    </div>
+                </div>
+                <div class="faq__item">
+                    <div class="faq__header">
+                        <h3>O site vai funcionar bem no celular?</h3>
+                        <i class="fas fa-chevron-down faq__icon"></i>
+                    </div>
+                    <div class="faq__content">
+                        <p>Com certeza! Todos os sites que desenvolvo são 100% responsivos, o que significa que se adaptam perfeitamente a qualquer tamanho de tela, seja em computadores, tablets ou, principalmente, celulares. Hoje, a maioria dos acessos vem de dispositivos móveis, e essa é uma prioridade máxima.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="contact section">
+            <div class="section__header">
+                <h2 class="section__title">Vamos Transformar Sua Ideia em Realidade?</h2>
+                <span class="section__subtitle">Envie sua mensagem ou me chame no WhatsApp. Estou pronto para ajudar!</span>
+            </div>
+            <div class="contact__container container">
+                <form action="https://formspree.io/f/xyzpwynb" method="POST" class="contact__form">
+                    <div class="form__group">
+                        <input type="text" name="name" id="name" placeholder=" " required class="form__input">
+                        <label for="name" class="form__label">Seu Nome</label>
+                    </div>
+                    <div class="form__group">
+                        <input type="email" name="email" id="email" placeholder=" " required class="form__input">
+                        <label for="email" class="form__label">Seu E-mail</label>
+                    </div>
+                    <div class="form__group">
+                        <textarea name="message" id="message" placeholder=" " rows="5" required class="form__input"></textarea>
+                        <label for="message" class="form__label">Me conte sobre seu projeto...</label>
+                    </div>
+                    <button type="submit" class="button button--flex">
+                        Enviar Proposta <i class="fas fa-paper-plane"></i>
+                    </button>
+                </form>
+            </div>
+        </section>
+    </main>
+    
+    <footer class="footer">
+        <div class="footer__container container">
+            <p class="footer__copy">&copy; 2025 Everton Moura | Desenvolvedor Web Estratégico.</p>
+            <div class="footer__socials">
+                <a href="https://api.whatsapp.com/send?phone=5543998719821" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://github.com/everton-dev" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            </div>
+        </div>
+    </footer>
+
+    <a href="#" class="scrollup" id="scroll-up"><i class="fas fa-arrow-up"></i></a>
+    <a href="https://wa.me/5543998719821?text=Olá,%20Everton!%20Vi%20seu%20portfólio%20e%20gostaria%20de%20um%20orçamento." class="whatsapp-button" id="whatsapp-float-button" target="_blank">
+        <i class="fab fa-whatsapp whatsapp-icon"></i><span class="whatsapp-tooltip">Fale Comigo!</span>
+    </a>
+
+    <script src="script.js"></script>
+</body>
+</html>
