--- a/Index.htm
+++ b/Index.htm
@@ -36,7 +36,7 @@
                 </ul>
             </div>
             <div class="nav__actions">
-                <a href="#contact" class="nav__button">Iniciar Projeto</a>
+                <a href="#contact" class="button nav__button">Iniciar Projeto</a>
                 <div class="nav__toggle" id="nav-toggle">
                     <i class="fas fa-bars"></i>
                 </div>
@@ -104,34 +104,22 @@
             </div>
             <div class="services__container container grid">
                 <div class="service__card">
-                    <i class="fas fa-laptop-code service__icon"></i>
-                    <h3 class="service__title">Site Institucional</h3>
-                    <p class="service__description">Aumente sua credibilidade e seja encontrado no Google. A vitrine digital perfeita para sua empresa ou negócio.</p>
+                    <i class="fas fa-laptop-code service__icon"></i><h3 class="service__title">Site Institucional</h3><p class="service__description">Aumente sua credibilidade e seja encontrado no Google. A vitrine digital perfeita para sua empresa ou negócio.</p>
                 </div>
                 <div class="service__card">
-                    <i class="fas fa-rocket service__icon"></i>
-                    <h3 class="service__title">Landing Page</h3>
-                    <p class="service__description">Página única focada em um objetivo: vender, capturar contatos ou divulgar um evento. Altamente eficaz para marketing.</p>
+                    <i class="fas fa-rocket service__icon"></i><h3 class="service__title">Landing Page</h3><p class="service__description">Página única focada em um objetivo: vender, capturar contatos ou divulgar um evento. Altamente eficaz para marketing.</p>
                 </div>
                 <div class="service__card">
-                    <i class="fas fa-image-portrait service__icon"></i>
-                    <h3 class="service__title">Portfólio Pessoal</h3>
-                    <p class="service__description">Para fotógrafos, designers, artistas e consultores. Uma galeria elegante para exibir seus melhores trabalhos e talentos.</p>
+                    <i class="fas fa-image-portrait service__icon"></i><h3 class="service__title">Portfólio Pessoal</h3><p class="service__description">Para fotógrafos, designers, artistas e consultores. Uma galeria elegante para exibir seus melhores trabalhos e talentos.</p>
                 </div>
                 <div class="service__card">
-                    <i class="fas fa-book-open service__icon"></i>
-                    <h3 class="service__title">Cardápio ou Catálogo Digital</h3>
-                    <p class="service__description">Exiba seus produtos ou pratos de forma atraente. Ideal para restaurantes e lojas que vendem via WhatsApp ou telefone.</p>
+                    <i class="fas fa-book-open service__icon"></i><h3 class="service__title">Cardápio ou Catálogo Digital</h3><p class="service__description">Exiba seus produtos ou pratos de forma atraente. Ideal para restaurantes e lojas que vendem via WhatsApp ou telefone.</p>
                 </div>
                 <div class="service__card">
-                    <i class="fas fa-calendar-star service__icon"></i>
-                    <h3 class="service__title">Site de Evento</h3>
-                    <p class="service__description">Página informativa para casamentos, conferências ou workshops, com programação, local e link para inscrições.</p>
+                    <i class="fas fa-calendar-star service__icon"></i><h3 class="service__title">Site de Evento</h3><p class="service__description">Página informativa para casamentos, conferências ou workshops, com programação, local e link para inscrições.</p>
                 </div>
                 <div class="service__card">
-                    <i class="fas fa-headset service__icon"></i>
-                    <h3 class="service__title">Manutenção & Suporte</h3>
-                    <p class="service__description">Foque no seu negócio e deixe a parte técnica comigo. Seu site sempre seguro, atualizado e funcionando perfeitamente.</p>
+                    <i class="fas fa-headset service__icon"></i><h3 class="service__title">Manutenção & Suporte</h3><p class="service__description">Foque no seu negócio e deixe a parte técnica comigo. Seu site sempre seguro, atualizado e funcionando perfeitamente.</p>
                 </div>
             </div>
         </section>
