--- a/Index.htm
+++ b/Index.htm
@@ -13,6 +13,9 @@
 </head>
 <body>
 
+    <div class="cursor-dot"></div>
+    <div class="cursor-outline"></div>
+
     <div id="preloader">
         <div class="preloader-content">
             <h1 class="preloader-logo">
@@ -62,15 +65,15 @@
                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 120">
                          <defs>
                              <linearGradient id="screenGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                                 <stop offset="0%" stop-color="#5D9CEC" stop-opacity="0.5"></stop>
-                                 <stop offset="100%" stop-color="#8b5cf6" stop-opacity="0.5"></stop>
+                                 <stop offset="0%" stop-color="#6366F1" stop-opacity="0.5"></stop>
+                                 <stop offset="100%" stop-color="#A855F7" stop-opacity="0.5"></stop>
                              </linearGradient>
                          </defs>
-                         <path d="M 10 110 L 190 110 L 200 100 L 0 100 Z" fill="#2D3748"></path>
-                         <rect x="15" y="10" width="170" height="90" rx="5" fill="#1A202C" stroke="#5D9CEC" stroke-width="1"></rect>
+                         <path d="M 10 110 L 190 110 L 200 100 L 0 100 Z" fill="#1E293B"></path>
+                         <rect x="15" y="10" width="170" height="90" rx="5" fill="#0F172A" stroke="#6366F1" stroke-width="1"></rect>
                          <rect class="animated-screen" x="25" y="20" width="150" height="70" fill="url(#screenGradient)"></rect>
-                         <path d="M 35 35 H 80 M 35 45 H 95 M 35 55 H 70 M 35 65 H 105" stroke="#F7FAFC" stroke-width="1.5" stroke-opacity="0.3"></path>
-                         <circle cx="100" cy="55" r="3" fill="#5D9CEC" opacity="0.7"></circle>
+                         <path d="M 35 35 H 80 M 35 45 H 95 M 35 55 H 70 M 35 65 H 105" stroke="#F8FAFC" stroke-width="1.5" stroke-opacity="0.3"></path>
+                         <circle cx="100" cy="55" r="3" fill="#A855F7" opacity="0.7"></circle>
                      </svg>
                 </div>
             </div>
