--- a/Index.htm
+++ b/Index.htm
@@ -66,15 +66,15 @@
                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 120">
                           <defs>
                               <linearGradient id="screenGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                                  <stop offset="0%" stop-color="#3B82F6" stop-opacity="0.5"></stop>
-                                  <stop offset="100%" stop-color="#60A5FA" stop-opacity="0.5"></stop>
+                                  <stop offset="0%" stop-color="#32DE8A" stop-opacity="0.5"></stop>
+                                  <stop offset="100%" stop-color="#34D399" stop-opacity="0.5"></stop>
                               </linearGradient>
                           </defs>
                           <path d="M 10 110 L 190 110 L 200 100 L 0 100 Z" fill="#1E293B"></path>
-                          <rect x="15" y="10" width="170" height="90" rx="5" fill="#0F172A" stroke="#3B82F6" stroke-width="1"></rect>
+                          <rect x="15" y="10" width="170" height="90" rx="5" fill="#0F172A" stroke="#32DE8A" stroke-width="1"></rect>
                           <rect class="animated-screen" x="25" y="20" width="150" height="70" fill="url(#screenGradient)"></rect>
                           <path d="M 35 35 H 80 M 35 45 H 95 M 35 55 H 70 M 35 65 H 105" stroke="#F8FAFC" stroke-width="1.5" stroke-opacity="0.3"></path>
-                          <circle cx="100" cy="55" r="3" fill="#60A5FA" opacity="0.7"></circle>
+                          <circle cx="100" cy="55" r="3" fill="#34D399" opacity="0.7"></circle>
                       </svg>
                 </div>
             </div>
@@ -224,7 +224,7 @@
                 </div>
                 <div class="diagnosis__result">
                     <p id="diagnosis-text">Selecione uma opção de cada pergunta para ver seu diagnóstico.</p>
-                    <a href="#contact" id="diagnosis-cta" class="button" style="display: none;">Receber Proposta <i class="fas fa-paper-plane"></i></a>
+                    <a href="#contact" id="diagnosis-cta" class="button button--flex">Receber Proposta <i class="fas fa-paper-plane"></i></a>
                 </div>
             </div>
         </section>
@@ -272,6 +272,6 @@
     </a>
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
