--- a/Index.htm
+++ b/Index.htm
@@ -95,15 +95,19 @@
                         Olá, sou Everton! Minha transição da contabilidade para a tecnologia foi uma busca por criar soluções práticas que realmente impactam o crescimento de um negócio. Hoje, meu objetivo é ser mais que um programador: sou um parceiro dedicado a entender suas metas e traduzi-las em um site que não apenas impressiona visualmente, mas que também funciona como uma ferramenta de negócios eficaz.
                     </p>
                     
-                    <div class="info-group">
-                        <h4 class="info-group__title"><i class="fas fa-graduation-cap"></i> Formação Acadêmica</h4>
-                        <div class="info-group__item">
-                            <p><strong>Desenvolvimento Web Full-Stack</strong></p>
-                            <span>Cursando em IFPR Campus Avançado Arapongas (2025)</span>
+                    <h4 class="info-group__title"><i class="fas fa-graduation-cap"></i> Formação Acadêmica</h4>
+                    <div class="academic__grid">
+                        <div class="academic__item">
+                            <i class="fas fa-laptop-code academic__icon"></i>
+                            <h5 class="academic__title">Desenvolvimento Web Full-Stack</h5>
+                            <span class="academic__institution">IFPR Campus Avançado Arapongas</span>
+                            <span class="academic__period">Cursando (Previsão: 2025)</span>
                         </div>
-                        <div class="info-group__item">
-                            <p><strong>Ciências Contábeis</strong></p>
-                            <span>Faccar Faculdade Paranaense (2013 - 2017)</span>
+                        <div class="academic__item">
+                            <i class="fas fa-chart-pie academic__icon"></i>
+                            <h5 class="academic__title">Ciências Contábeis</h5>
+                            <span class="academic__institution">Faccar Faculdade Paranaense</span>
+                            <span class="academic__period">Concluído em 2017</span>
                         </div>
                     </div>
                 </div>
