--- a/Index.htm
+++ b/Index.htm
@@ -99,15 +99,19 @@
                     <div class="academic__grid">
                         <div class="academic__item">
                             <i class="fas fa-laptop-code academic__icon"></i>
-                            <h5 class="academic__title">Desenvolvimento Web Full-Stack</h5>
-                            <span class="academic__institution">IFPR Campus Avançado Arapongas</span>
-                            <span class="academic__period">Cursando (Previsão: 2025)</span>
+                            <div class="academic__details">
+                                <h5 class="academic__title">Desenvolvimento Web Full-Stack</h5>
+                                <span class="academic__institution">IFPR Campus Avançado Arapongas</span>
+                                <span class="academic__period">Cursando (Previsão: 2025)</span>
+                            </div>
                         </div>
                         <div class="academic__item">
                             <i class="fas fa-chart-pie academic__icon"></i>
-                            <h5 class="academic__title">Ciências Contábeis</h5>
-                            <span class="academic__institution">Faccar Faculdade Paranaense</span>
-                            <span class="academic__period">Concluído em 2017</span>
+                            <div class="academic__details">
+                                <h5 class="academic__title">Ciências Contábeis</h5>
+                                <span class="academic__institution">Faccar Faculdade Paranaense</span>
+                                <span class="academic__period">Concluído em 2017</span>
+                            </div>
                         </div>
                     </div>
                 </div>
