--- a/Index.htm
+++ b/Index.htm
@@ -268,7 +268,7 @@
             <div class="footer__socials">
                 <a href="https://api.whatsapp.com/send?phone=5543998719821" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                 <a href="https://github.com/everton-dev" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/seu-usuario/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
             </div>
         </div>
     </footer>
