--- a/Index.htm
+++ b/Index.htm
@@ -148,53 +148,60 @@
                 <span class="section__subtitle">Veja na prática como eu transformo ideias em realidade</span>
             </div>
             <div class="projects__container container grid">
+                
                 <div class="project__card">
-                    <div class="project__image">
-                        <img src="images/prof-vane-pdfs.png" alt="Plataforma educacional Prof Vane PDFs">
-                    </div>
-                    <div class="project__content">
-                        <h3 class="project__title">Prof Vane PDFs</h3>
-                        <div class="project__details">
-                            <h4><i class="fas fa-bullseye"></i> O Desafio</h4>
-                            <p>A cliente precisava de uma vitrine online profissional para centralizar e vender seus materiais pedagógicos, saindo da informalidade dos grupos de WhatsApp.</p>
-                            <h4><i class="fas fa-lightbulb"></i> A Solução</h4>
-                            <p>Criei uma landing page vibrante e de fácil navegação, que organiza os produtos e direciona o cliente para a compra de forma clara, fortalecendo a sua marca.</p>
+                    <div class="project__card-inner">
+                        <div class="project__card-front">
+                            <img src="images/prof-vane-pdfs.png" alt="Plataforma educacional Prof Vane PDFs">
                         </div>
-                        <div class="project__tech-list">
-                            <span class="tech-badge">HTML5</span>
-                            <span class="tech-badge">CSS3</span>
-                            <span class="tech-badge">JavaScript</span>
-                        </div>
-                        <div class="project__links">
-                            <a href="https://materiaisdaprofvane.netlify.app/" target="_blank" class="project__link">Ver Site <i class="fas fa-arrow-right"></i></a>
-                            <a href="https://github.com/everton-dev/prof-vane-pdfs" target="_blank" class="project__link" aria-label="Ver código no GitHub"><i class="fab fa-github"></i></a>
-                        </div>
-                    </div>
-                </div>
-                 <div class="project__card">
-                    <div class="project__image">
-                        <img src="images/sistema-financeiro.png" alt="Dashboard Financeiro Pessoal">
-                    </div>
-                    <div class="project__content">
-                        <h3 class="project__title">Dashboard Financeiro</h3>
-                        <div class="project__details">
-                           <h4><i class="fas fa-bullseye"></i> O Desafio</h4>
-                           <p>Desenvolver uma ferramenta prática e acessível para que qualquer pessoa pudesse organizar suas finanças pessoais de forma intuitiva e visual.</p>
-                           <h4><i class="fas fa-lightbulb"></i> A Solução</h4>
-                           <p>Criei um PWA que funciona offline e permite o controle de contas e metas, com gráficos interativos para facilitar a visualização dos dados.</p>
-                        </div>
-                        <div class="project__tech-list">
-                            <span class="tech-badge">JavaScript</span>
-                            <span class="tech-badge">PWA</span>
-                            <span class="tech-badge">Chart.js</span>
-                            <span class="tech-badge special-badge">Uso Gratuito</span>
-                        </div>
-                        <div class="project__links">
-                            <a href="https://sistema-financeiro-avancado.netlify.app/" target="_blank" class="project__link">Usar Ferramenta <i class="fas fa-arrow-right"></i></a>
-                            <a href="#" target="_blank" class="project__link" aria-label="Ver código no GitHub"><i class="fab fa-github"></i></a>
+                        <div class="project__card-back">
+                            <h3 class="project__title">Prof Vane PDFs</h3>
+                            <div class="project__details">
+                                <h4><i class="fas fa-bullseye"></i> O Desafio</h4>
+                                <p>A cliente precisava de uma vitrine online profissional para centralizar e vender seus materiais pedagógicos.</p>
+                                <h4><i class="fas fa-lightbulb"></i> A Solução</h4>
+                                <p>Criei uma landing page vibrante e de fácil navegação, fortalecendo a sua marca.</p>
+                            </div>
+                            <div class="project__tech-list">
+                                <span class="tech-badge">HTML5</span>
+                                <span class="tech-badge">CSS3</span>
+                                <span class="tech-badge">JavaScript</span>
+                            </div>
+                            <div class="project__links">
+                                <a href="https://materiaisprofvane.netlify.app/" target="_blank" class="project__link">Ver Site <i class="fas fa-arrow-right"></i></a>
+                                <a href="https://github.com/everton-dev/prof-vane-pdfs" target="_blank" class="project__link" aria-label="Ver código no GitHub"><i class="fab fa-github"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <div class="project__card">
+                    <div class="project__card-inner">
+                        <div class="project__card-front">
+                            <img src="images/sistema-financeiro.png" alt="Dashboard Financeiro Pessoal">
+                        </div>
+                        <div class="project__card-back">
+                            <h3 class="project__title">Dashboard Financeiro</h3>
+                            <div class="project__details">
+                                <h4><i class="fas fa-bullseye"></i> O Desafio</h4>
+                                <p>Desenvolver uma ferramenta prática para que qualquer pessoa pudesse organizar suas finanças de forma intuitiva.</p>
+                                <h4><i class="fas fa-lightbulb"></i> A Solução</h4>
+                                <p>Criei um PWA que funciona offline e permite o controle de contas e metas, com gráficos interativos.</p>
+                            </div>
+                            <div class="project__tech-list">
+                                <span class="tech-badge">JavaScript</span>
+                                <span class="tech-badge">PWA</span>
+                                <span class="tech-badge">Chart.js</span>
+                                <span class="tech-badge special-badge">Uso Gratuito</span>
+                            </div>
+                            <div class="project__links">
+                                <a href="#" target="_blank" class="project__link">Usar Ferramenta <i class="fas fa-arrow-right"></i></a>
+                                <a href="#" target="_blank" class="project__link" aria-label="Ver código no GitHub"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
