--- a/Index.htm
+++ b/Index.htm
@@ -168,7 +168,7 @@
                                 <span class="tech-badge">JavaScript</span>
                             </div>
                             <div class="project__links">
-                                <a href="https://materiaisprofvane.netlify.app/" target="_blank" class="project__link">Ver Site <i class="fas fa-arrow-right"></i></a>
+                                <a href="https://materiaisdaprofvane.netlify.app/" target="_blank" class="project__link">Ver Site <i class="fas fa-arrow-right"></i></a>
                                 <a href="https://github.com/everton-dev/prof-vane-pdfs" target="_blank" class="project__link" aria-label="Ver código no GitHub"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
@@ -195,7 +195,7 @@
                                 <span class="tech-badge special-badge">Uso Gratuito</span>
                             </div>
                             <div class="project__links">
-                                <a href="#" target="_blank" class="project__link">Usar Ferramenta <i class="fas fa-arrow-right"></i></a>
+                                <a href="https://sistema-financeiro-avancado.netlify.app/" target="_blank" class="project__link">Usar Ferramenta <i class="fas fa-arrow-right"></i></a>
                                 <a href="#" target="_blank" class="project__link" aria-label="Ver código no GitHub"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
